--- a/indexStyle.css
+++ b/indexStyle.css
@@ -56,10 +56,6 @@ div, #header-navigation-bar, .section, .header-navigation-bar {
     align-items: center;
 }
 
-.flex-container {
-    display: flex;
-}
-
 .section {
     height: 25%; 
     align-items: center;
@@ -77,7 +73,6 @@ div, #header-navigation-bar, .section, .header-navigation-bar {
 }
 
 .flex-container {
-    margin: 2.5%;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -94,9 +89,9 @@ div, #header-navigation-bar, .section, .header-navigation-bar {
     align-self: auto;
     order: 0;
     height: 100%;
-    width: 10%;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
   }
-  
   
 
 body {
