--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,10 +1,19 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 #base {
     height: 400vh;
     transform: translate3d(0px, 0px, 0px);
     transition: all 750ms ease 0s;
 }
 
-div, #header-navigation-bar, .section, .header-navigation-bar {
+div,
+#header-navigation-bar,
+.section,
+.header-navigation-bar {
     width: 100%;
 }
 
@@ -39,33 +48,32 @@ div, #header-navigation-bar, .section, .header-navigation-bar {
 }
 
 #sectionTwo {
-    background-color: rgb(39, 145, 231);
+    background-color: #F5831B;
 }
 
-#sectionThree {
-    background-color: rgb(248, 71, 71);
-}
 
 #sectionFour {
     background-color: #F5831B;
 }
 
-#header-navigation-bar{
+#header-navigation-bar {
     grid-area: 1 / 1 / 2 / 6;
     height: 25%;
     align-items: center;
 }
 
-#form-container{
+#plano-formulario {
     position: fixed;
-    z-index: 2;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.527);
-    top: 0%;
     display: none;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.527);
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    top: 0%;
 }
 
-#form-button{
+#form-button {
     background-color: #A85609;
     border: none;
     color: white;
@@ -78,7 +86,7 @@ div, #header-navigation-bar, .section, .header-navigation-bar {
 }
 
 .section {
-    height: 25%; 
+    height: 25%;
     align-items: center;
     justify-content: center;
 }
@@ -100,9 +108,9 @@ div, #header-navigation-bar, .section, .header-navigation-bar {
     justify-content: center;
     align-items: normal;
     align-content: center;
-  }
-  
-  .flex-container li {
+}
+
+.flex-container li {
     display: block;
     flex-grow: 0;
     flex-shrink: 1;
@@ -112,29 +120,202 @@ div, #header-navigation-bar, .section, .header-navigation-bar {
     height: 100%;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
-  }
-  
+}
+
 
 body {
     overflow: hidden;
-    margin: 0%;
 }
 
-h1 {
-    color: brown;
-    align-self: center;
-    text-align: center;
-    font-size: 9rem;
+/*--- Estilo para la seccion del mapa---*/
+
+.map-section {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 5px;
+    height: 100vh;
 }
 
-ul{
-    padding: 0%;
+.contenedor-mapa {
+    grid-area: 2 / 2 / 4 / 5;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-form {
-    padding: 5%;
+.texto-mapa {
+    grid-area: 4 / 3 / 5 / 6;
+    padding-left: 50%;
+    padding-right: 5%;
 }
 
-fieldset input, fieldset textarea{
+
+/*---Estilo para el formulario---*/
+
+fieldset input,
+fieldset textarea {
     width: 100%;
+}
+
+
+.form-container{
+    position: relative;
+    max-width: 900px;
+    width: 100%;
+    border-radius: 6px;
+    padding: 30px;
+    margin: 0 15px;
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+}
+.form-container header{
+    position: relative;
+    font-size: 20px;
+    font-weight: 600;
+    color: #333;
+}
+.form-container form{
+    position: relative;
+    margin-top: 16px;
+    min-height: 490px;
+    background-color: #fff;
+    overflow: hidden;
+}
+.form-container form .form{
+    position: absolute;
+    background-color: #fff;
+    transition: 0.3s ease;
+}
+.form-container form .form.second{
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(100%);
+}
+form.secActive .form.second{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateX(0);
+}
+form.secActive .form.first{
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(-100%);
+}
+.form-container form .title{
+    display: block;
+    margin-bottom: 8px;
+    font-size: 16px;
+    font-weight: 500;
+    margin: 6px 0;
+    color: #333;
+}
+.form-container form .fields{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+form .fields .input-field{
+    display: flex;
+    width: calc(100% / 3 - 15px);
+    flex-direction: column;
+    margin: 4px 0;
+}
+.input-field label{
+    font-size: 12px;
+    font-weight: 500;
+    color: #2e2e2e;
+}
+.input-field input, select{
+    outline: none;
+    font-size: 14px;
+    font-weight: 400;
+    color: #333;
+    border-radius: 5px;
+    border: 1px solid #aaa;
+    padding: 0 15px;
+    height: 42px;
+    margin: 8px 0;
+}
+.input-field input :focus,
+.input-field select:focus{
+    box-shadow: 0 3px 6px rgba(0,0,0,0.13);
+}
+.input-field select,
+.input-field input[type="date"]{
+    color: #707070;
+}
+.input-field input[type="date"]:valid{
+    color: #333;
+}
+.form-container form button, .backBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 45px;
+    max-width: 200px;
+    width: 100%;
+    border: none;
+    outline: none;
+    color: #fff;
+    border-radius: 5px;
+    margin: 25px 0;
+    background-color: #A85609;
+    transition: all 0.3s linear;
+    cursor: pointer;
+}
+.form-container form .btnText{
+    font-size: 14px;
+    font-weight: 400;
+}
+form button:hover{
+    background-color: #265df2;
+}
+form button i,
+form .backBtn i{
+    margin: 0 6px;
+}
+form .backBtn i{
+    transform: rotate(180deg);
+}
+form .buttons{
+    display: flex;
+    align-items: center;
+}
+form .buttons button , .backBtn{
+    margin-right: 14px;
+}
+
+/* Media breakpoints */
+
+@media (max-width: 1023px) {
+    /*mapa*/
+    .texto-mapa {
+        padding-left: 25%;
+    }
+}
+
+@media (max-width: 750px) {
+    /*mapa*/
+    .texto-mapa {
+        padding-left: 0%;
+    }
+
+    /*formulario*/
+    .form-container form{
+        overflow-y: scroll;
+    }
+    .form-container form::-webkit-scrollbar{
+       display: none;
+    }
+    form .fields .input-field{
+        width: calc(100% / 2 - 15px);
+    }
+}
+
+@media (max-width: 550px) {
+    /*formulario*/
+    form .fields .input-field{
+        width: 100%;
+    }
 }
