--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,20 +1,23 @@
+/* Importe de fuente usadas en el estilo */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    width: 100%;
+    font-family:'Poppins', sans-serif;
 }
 
 #base {
-    height: 400vh;
+    height: 300vh;
     transform: translate3d(0px, 0px, 0px);
     transition: all 750ms ease 0s;
 }
 
-div,
-#header-navigation-bar,
-.section,
-.header-navigation-bar {
-    width: 100%;
+.section {
+    height: 100vh;
 }
 
 /*-01 Seccion Inicio de la paguina*/
@@ -27,7 +30,6 @@ div,
     justify-content: flex-start;
     align-items: center;
     align-content: flex-start;
-    height: 100vh;
     flex-direction: column;
 }
 
@@ -61,6 +63,7 @@ div,
     margin: 2rem;
     width: auto;
     list-style-type: none;
+    cursor: pointer;
 }
 
 .cat {
@@ -94,6 +97,7 @@ div,
 .contenedor-contenido > div h1 {
     color: #F5831B;
     font-size: 3rem;
+    font-weight: 700
 }
 
 .contenedor-contenido > div p {
@@ -102,57 +106,118 @@ div,
 
 /* Estilo de la imagen */
 
-img {
+.contenedor-contenido img {
     width: auto;
     height: 100%;
 }
 
-/* Algo mas */
+/*--- 02 Mapa ---*/
 
-#navigator {
-    position: fixed;
-    z-index: 1;
-    top: 25%;
-    padding-left: 5%;
-}
-
-#section-one-background {
-    background-color: white;
+.map-section {
     display: grid;
-    grid-template-columns: 0.5fr repeat(2, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
     grid-column-gap: 0px;
-    grid-row-gap: 0px;
-}
-
-#section-one-content {
-    grid-area: 2 / 2 / 6 / 3;
-    height: 75%;
-    align-items: center;
-    justify-content: center;
-}
-
-#section-one-content-two {
-    grid-area: 2 / 3 / 6 / 4;
-    height: 75%;
-    align-items: center;
-    justify-content: center;
-}
-
-#sectionTwo {
+    grid-row-gap: 5px;
+    height: 100vh;
     background-color: #F5831B;
 }
 
-
-#sectionFour {
-    background-color: #F5831B;
+.contenedor-mapa {
+    grid-area: 2 / 2 / 4 / 5;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.247);
 }
 
-#header-navigation-bar {
-    grid-area: 1 / 1 / 2 / 6;
+.texto-mapa {
+    grid-area: 4 / 3 / 5 / 6;
+    padding-left: 50%;
+    padding-right: 5%;
+}
+
+/*--- 03 Acceso a formulario ---*/
+
+#form-section {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 100vh;
+    flex-direction: column;
+}
+
+#form-section > div {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 70%;
+    height: 80%;
+    flex-direction: column;
+}
+
+#form-section h1 {
+    text-align: center;
+    margin-top: 10%;
+}
+
+#form-section p {
+    text-align: center;
+    margin-top: 1rem;
+}
+
+#form-section button {
+    width: auto;
+    margin-top: 5%;
+    background-color: #F5831B;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    border-radius: 9999px;
+    box-sizing: border-box;
+    border: 0 solid #e2e8f0;
+}
+
+/*--- 04 Navegador ---*/
+
+#navegador-lateral {
+    position: fixed;
+    z-index: 1;
+    height: 100%;
+    padding-left: 3%;
+    width: 10%;
+    top: 30%;
+}
+
+#navegador-lateral-ul {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+#navedador-lateral-ul li {
+    width: auto;
     height: 25%;
-    align-items: center;
+    margin: 1.5rem;
+    list-style-type: none;
+    cursor: pointer;
+    color: #000000;
+    transition: color 0.3s ease-in-out;
 }
+
+#navedador-lateral-ul li:hover {
+    color: #0000004f;
+}
+
+/* Something more */
 
 #plano-formulario {
     position: fixed;
@@ -165,34 +230,6 @@ img {
     top: 0%;
 }
 
-#form-button {
-    background-color: #A85609;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: block;
-    font-size: 16px;
-    align-self: center;
-}
-
-.section {
-    height: 25%;
-    align-items: center;
-    justify-content: center;
-}
-
-.navegador-lateral-li {
-    display: block;
-    position: relative;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    color: red;
-}
-
 .flex-container {
     display: flex;
     flex-direction: row;
@@ -202,43 +239,9 @@ img {
     align-content: center;
 }
 
-.flex-container li {
-    display: block;
-    flex-grow: 0;
-    flex-shrink: 1;
-    flex-basis: auto;
-    align-self: auto;
-    order: 0;
-    height: 100%;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-}
-
 
 body {
     overflow: hidden;
-}
-
-/*--- Estilo para la seccion del mapa---*/
-
-.map-section {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 5px;
-    height: 100vh;
-}
-
-.contenedor-mapa {
-    grid-area: 2 / 2 / 4 / 5;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-}
-
-.texto-mapa {
-    grid-area: 4 / 3 / 5 / 6;
-    padding-left: 50%;
-    padding-right: 5%;
 }
 
 
@@ -388,12 +391,32 @@ form .buttons button , .backBtn{
 }
 
 @media (max-width: 750px) {
-    /*mapa*/
+    /* Navegador lateral izquierdo */
+    #navegador-lateral {
+        display: none;
+    }
+    
+    /* Inicio */
+    #inicio > .contenedor-contenido{
+        flex-direction: column;
+    }
+
+    .contenedor-contenido > div{
+        width: 100%;
+        height: 50%;
+    }
+
+    .contenedor-contenido {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
+    /* Mapa */
     .texto-mapa {
         padding-left: 0%;
     }
 
-    /*formulario*/
+    /* Formulario */
     .form-container form{
         overflow-y: scroll;
     }
@@ -406,7 +429,7 @@ form .buttons button , .backBtn{
 }
 
 @media (max-width: 550px) {
-    /*formulario*/
+    /* Formulario */
     form .fields .input-field{
         width: 100%;
     }
