--- a/indexStyle.css
+++ b/indexStyle.css
@@ -31,6 +31,7 @@
     align-items: center;
     align-content: flex-start;
     flex-direction: column;
+    background-color: #fff;
 }
 
 #inicio > #header-navigation-bar{
@@ -144,6 +145,7 @@
     align-content: center;
     height: 100vh;
     flex-direction: column;
+    background-color: #fff;
 }
 
 #form-section > div {
