--- a/indexStyle.css
+++ b/indexStyle.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+/* Estilos generales o compartidos */
+
 *{
     margin: 0;
     padding: 0;
@@ -10,15 +12,25 @@
     font-family:'Poppins', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
+
 #base {
     height: 300vh;
-    transform: translate3d(0px, 0px, 0px);
-    transition: all 750ms ease 0s;
+    transform: translate3d(0px, 0vh, 0px);
+    transition: transform 750ms ease 0s;
 }
 
 .section {
     height: 100vh;
 }
+
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+} 
 
 /*-01 Seccion Inicio de la paguina*/
 
@@ -114,7 +126,7 @@
 
 /*--- 02 Mapa ---*/
 
-.map-section {
+#map-section {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
